# rp-hal-issue-287-test

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
