[package]
name = "rp-hal-issue-287-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
embedded-hal = "0.2.6"
embedded-time = "0.12.1"
panic-semihosting = "0.5.6"
rp-pico = "0.2.0"
